
2005-08-14 release 0.2.8 'rainy village'
	support for importing SWFs with DefineFont2/3, DefineButton2,
	DefineSound and StartSound tags;
	support for SetScriptLimits and SetTabIndex;
	support for 8bit palette or grayscale PNGs;
	support for DefineBitsJPEG3 (importing a jpeg and 8bit mask PNG),
	support for PlaceObject2 events (string/double/boolean),
	experimental component import,
	parse #rrggbbaa colors correctly,
	export font ID if font is placed in library,
	remove unnecessary MovieClip level for SWF import,
	various fixes for size calculation, glyph shapes, and more,
	preparations for basic SVG conversion,
	reorder codebase and clean up.

2005-06-26 release 0.2.7 'lazy sunday afternoon'
	adds DefineBits, DefineShape2 and DefineShape3
	tags to the basic dialect, so these get id-mapped;
	uses freetype family name as font name;
	fixes two small bugs for <import/> (shared lib support),
	so imported symbols can now be <place/>d.

2005-06-16 release 0.2.6
	shape/clip boundaries for image import were square
	determine extension for image import correctly
	minimum compression buffer size for importing PNGs
	wideGlyphOffset flag now always true
	set bold/italic flags for TTF import

2005-06-08 release 0.2.5
	fixes Red/Blue swap bug for 24bit PNG import

2005-06-06 release 0.2.4
	<set/> and @class logic is now embedded in
	__Package sprites,
	DoInitAction's @sprite id is properly mapped
	for swf import.

2005-06-01 release 0.2.3
	new <video/> element,
	new <set name= member= value=/> element,
	new @class property for <clip/>s (inheritance),
	xslt can use exslt extensions,
	OSX binary,
	64bit compatibility (tested on AMD64).

2005-04-22 release 0.2.2
	stack items in actions are properly parsed
	and written; swfml simple requires frame tags,
	brings new name attribute for place and frame 
	tags, clip tags (without @import), call and
	stop tags, symbol attribute for import tags,
	and some corrections.

2005-04-20 release 0.2.1
	fixed a bug with PNG with alpha channel on